@@ -1,4 +1,5 @@
 X 0.2
+    + Add Bow + Sharpness = increase velocity
     * Add Bow + Aqua Affinity = freeze water, stun players
     + Add Bow + Bane of Arthropods = poison
     * Add Bow + Efficiency = instant shoot
